# core2

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
src/: buffered.rs  cursor.rs  error.rs  impl.rs  impls.rs  lib.rs  traits.rs  util.rs
src/io/: buffered.rs  cursor.rs  error.rs  mod.rs  util.rs
tests/: tests.rs
